[package]
name = "alloy-bikes"
version = "0.1.0"
authors = ["Marc Schlegel <marc.schlegel@gmx.de>"]

[dependencies]
hyper = "0.11"
futures = "0.1"
mime = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
env_logger = "0.5.3"
diesel = { version = "1.1.0", features = ["sqlite"], optional = true }

[dev_dependencies]
hamcrest = "*"


[features]
repository_diesel = ["diesel"]
repository_inmem = []